# thrones

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  plugins.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: bootstrap.py  config.py  dependencies.py  main.py  static_mount.py
app/conversions/: __init__.py  efg_export.py  efg_nfg.py  efg_string.py  registry.py  remote.py
app/core/: analysis_helpers.py  dependencies.py  errors.py  gambit_utils.py  http_client.py  paths.py  plugin_manager.py  pycid_utils.py  registry.py  remote_plugin.py  store.py  strategies.py  tasks.py  types.py
app/formats/: __init__.py  efg.py  json_format.py  nfg.py  remote.py
app/formats/gambit/: __init__.py  efg.py  nfg.py
app/models/: __init__.py  efg_string.py  extensive_form.py  game.py  maid.py  normal_form.py  vegas.py
app/plugins/: __init__.py  dominance.py  iesds.py  nash.py  validation.py  verify_profile.py
app/plugins/gambit/: __init__.py  iesds.py  nash.py  verify_profile.py
app/plugins/pycid/: __init__.py  nash.py
app/routes/: analyses.py  games.py  tasks.py
design/: canvas-architecture.md  gambit-canvas-design.md  gambit-canvas-wireframes.md  gambit-tech-stack.md
docker/: Dockerfile.app  Dockerfile.base  Dockerfile.egttools  Dockerfile.gambit  Dockerfile.openspiel  Dockerfile.pycid  Dockerfile.vegas
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEBT-REVIEW.md  GAME_FORMATS.md  PLUGIN_GUIDE.md  REFACTOR-PLAN.md  ROADMAP.md  TROUBLESHOOTING.md  canvas-architecture.md  code-review.md  gambit-canvas-design.md  potential-plugins.md  security-code-review.md
docs/schemas/: game.schema.json
examples/: battle-of-sexes.json  battle_of_sexes.json  centipede.json  matching-pennies.json  matching_pennies.json  prisoners-dilemma.json  prisoners-dilemma.maid.json  prisoners-dilemma.vg  prisoners_dilemma.json  rock-paper-scissors.json  rock_paper_scissors.json  signaling-game.json  signaling-game.maid.json  stag-hunt.json  stag_hunt.json  trust-game.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx
frontend/src/canvas/: index.ts
frontend/src/canvas/config/: visualConfig.ts
frontend/src/canvas/core/: sceneGraph.ts
frontend/src/canvas/hooks/: useCanvas.ts  useLayout.ts  useMAIDOverlays.ts  useMatrixOverlays.ts  useOverlays.ts  useSceneGraph.ts
frontend/src/canvas/layout/: maidLayout.ts  matrixLayout.ts  treeLayout.ts
frontend/src/canvas/overlays/: BaseOverlayManager.ts  EdgeProbabilityOverlay.ts  EquilibriumOverlay.ts  MAIDEquilibriumOverlay.ts  MAIDOverlayManager.ts  MatrixEquilibriumOverlay.ts  MatrixIESDSOverlay.ts  MatrixOverlayManager.ts  OverlayManager.ts  overlayUtils.ts  types.ts
frontend/src/canvas/renderers/: MAIDRenderer.ts  MatrixRenderer.ts  TreeRenderer.ts  types.ts
frontend/src/canvas/utils/: textUtils.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/canvas/: GameCanvas.css  GameCanvas.tsx
frontend/src/components/charts/: LineChart.tsx
frontend/src/components/common/: Modal.css  Modal.tsx
frontend/src/components/config/: ConfigModal.css  ConfigModal.tsx
frontend/src/components/editor/: CodeEditor.tsx
frontend/src/components/layout/: GameInfoBar.css  GameInfoBar.tsx  GameSelector.css  GameSelector.tsx  Header.css  Header.tsx  MainLayout.css  MainLayout.tsx  StatusBar.css  StatusBar.tsx
frontend/src/components/panels/: AnalysisPanel.css  AnalysisPanel.tsx  AnalysisSection.tsx  (+9 more)
frontend/src/hooks/: useGameProperties.ts
frontend/src/languages/: vegas.ts
frontend/src/lib/: api.ts  gameProperties.ts  logger.ts
frontend/src/registry/: analysisRegistry.tsx
frontend/src/stores/: analysisStore.ts  configStore.ts  gameStore.ts  index.ts  pluginStore.ts  uiStore.ts
frontend/src/styles/: globals.css
frontend/src/test/: setup.ts
frontend/src/types/: analysis.ts  game.ts  index.ts
frontend/src/utils/: mathUtils.test.ts  mathUtils.ts
plugins/egttools/: pyproject.toml
plugins/egttools/egttools_plugin/: __init__.py  __main__.py  fixation.py  replicator.py
plugins/egttools/tests/: __init__.py  test_replicator.py
plugins/gambit/: pyproject.toml
plugins/gambit/gambit_plugin/: __init__.py  __main__.py  backward_induction.py  gambit_utils.py  iesds.py  levelk.py  nash.py  parsers.py  qre.py  strategies.py  supports.py  verify_profile.py
plugins/gambit/tests/: test_analyses.py  test_iesds.py  test_nash.py  test_parsers.py  test_verify_profile.py
plugins/openspiel/: README.md  pyproject.toml
plugins/openspiel/openspiel_plugin/: __init__.py  __main__.py  cfr.py  exploitability.py
plugins/openspiel/tests/: __init__.py  test_cfr.py
plugins/pycid/: pyproject.toml
plugins/pycid-old/: pyproject.toml
plugins/pycid-old/pycid_plugin/: __init__.py  pycid_utils.py  spe.py
plugins/pycid-old/tests/: test_nash.py
plugins/pycid/pycid_plugin/: __init__.py  __main__.py  cid_analysis.py  convert.py  nash.py  pycid_utils.py  spe.py  verify_profile.py
plugins/pycid/tests/: test_convert.py  test_nash.py  test_spe.py
plugins/vegas/: pyproject.toml
plugins/vegas/tests/: __init__.py  test_parser.py
plugins/vegas/vegas_plugin/: __init__.py  __main__.py  parser.py
scripts/: create_venv.bat  create_venv.ps1  restart.ps1  restart.sh  run-all-tests.ps1  setup-plugins.ps1  setup-plugins.sh
shared-pkg/: pyproject.toml
shared-pkg/shared/: __init__.py  efg_export.py  strategies.py
tests/: __init__.py  conftest.py  test_api.py  test_api_tasks.py  test_models.py  test_plugin_manager.py  test_registry.py  test_remote_plugin.py  test_tasks.py
tests/integration/: __init__.py  test_maid_conversion.py  test_plugin_flow.py
tests/test_conversions/: __init__.py  test_efg_nfg.py
tests/test_formats/: __init__.py  test_efg.py  test_json_format.py  test_nfg.py  test_registry.py
tests/test_plugins/: test_dominance.py  test_iesds.py  test_nash.py  test_validation.py  test_verify_profile.py
(+22 files in other folders)
