[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "game-theory-workbench"
version = "0.1.0"
description = "A canvas-first game theory analysis and visualization workbench"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
gambit = ["pygambit==16.5.0"]
# PyCID integration requires containerization due to dependency conflicts
# See docs/ROADMAP.md Section 5.4 for details
# pycid = [
#     "pycid @ file:external/pycid",  # Local fork
#     "pgmpy==0.1.17",
#     "pygambit==16.0.2",  # PyCID requires older pygambit
#     "matplotlib",
#     "networkx",
# ]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx==0.28.1",
    "pygambit==16.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "app/*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
