[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "game-theory-workbench"
version = "0.1.0"
description = "A canvas-first game theory analysis and visualization workbench"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
    "python-multipart>=0.0.22",
    "httpx>=0.27.0",
    "thrones-shared @ file:shared-pkg",
]

[project.optional-dependencies]
# Analysis libraries are now in isolated plugin venvs (plugins/gambit/, plugins/pycid/).
# The main app communicates with them over HTTP.
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx==0.28.1",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "bandit>=1.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "app/*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false  # TODO: Enable once types are tightened
warn_unused_ignores = true
disallow_untyped_defs = false  # Start permissive, tighten over time
ignore_missing_imports = true
disable_error_code = ["arg-type", "assignment", "attr-defined", "var-annotated"]  # TODO: Fix these type issues
exclude = [
    "tests/",
    "plugins/",
]

[tool.bandit]
exclude_dirs = ["tests", "plugins"]
skips = ["B101"]  # assert_used - OK in application code
