[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "egttools-plugin"
version = "0.1.0"
description = "Evolutionary game theory analysis plugin (replicator dynamics, fixation probabilities)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "httpx==0.28.1",
]
