[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gambit-plugin"
version = "0.1.0"
description = "Gambit-powered game theory analysis plugin service"
requires-python = ">=3.12"
dependencies = [
    "pygambit==16.5.0",
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
    "thrones-shared @ file:shared-pkg",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "httpx==0.28.1",
]
