[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openspiel-plugin"
version = "0.1.0"
description = "OpenSpiel-powered CFR and exploitability analysis plugin (Linux/macOS only)"
requires-python = ">=3.12"
# Note: open_spiel only works on Linux/macOS. On Windows, the plugin starts
# but returns an error status. See README.md for WSL setup instructions.
dependencies = [
    "numpy>=1.26",
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
]

[project.optional-dependencies]
# Install with: pip install -e ".[openspiel]" on Linux/macOS
openspiel = [
    "open_spiel>=1.5",
]
dev = [
    "pytest>=9.0.2",
    "httpx==0.28.1",
]
