[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycid-plugin"
version = "0.2.0"
description = "PyCID-powered MAID analysis plugin service"
requires-python = ">=3.10"
dependencies = [
    # pycid and its dependencies (pygambit, pgmpy) are installed via Dockerfile
    # from https://github.com/elazarg/pycid
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
    "thrones-shared @ file:shared-pkg",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "httpx==0.28.1",
]
