[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vegas-plugin"
version = "0.1.0"
description = "Vegas DSL plugin for the Game Theory Workbench"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
include = ["vegas_plugin*"]
